# HSE-Python

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: testing.yml
scripts/: to_markdown_all_practices.sh
src/hse_python/: __init__.py  errors.py
src/hse_python/exam/: trading.py
src/hse_python/practice_1/: README.md  __init__.py  helloworld.py  ones.py  sum_ranges.py
src/hse_python/practice_10/: README.md  __init__.py  task.py  task_manager.py
src/hse_python/practice_11/: README.md  __init__.py  complex_number.py
src/hse_python/practice_2/: README.md  __init__.py  array_utils.py  compress.py  diagonal_sum.py  merge.py  squares.py  tasks.md  utils.py
src/hse_python/practice_3/: README.md  __init__.py  formatter.py  markdown.py  parser.py  tasks.md  utils.py
src/hse_python/practice_7/: README.md  __init__.py  config.yaml  config_loader.py  converter.py
src/hse_python/practice_7_ext/: README.md  __init__.py
src/hse_python/practice_7_ext/client/: run.py
src/hse_python/practice_7_ext/client/core/: __init__.py  client.py  errors.py
src/hse_python/practice_7_ext/server/: Dockerfile  docker-compose.yml  openapi.yaml  run.py
src/hse_python/practice_7_ext/server/core/: __init__.py  cache.py  income_calculator.py  views.py
src/hse_python/practice_9/: README.md  tasks.py
src/hse_python/utils/: array_utils.py  decorators.py  errors.py
tests/: practice10_test.py  practice11_test.py  practice1_test.py  practice2_test.py  practice3_test.py  practice7_ext_test.py  practice7_test.py  practice9_test.py
